@@ -337,6 +337,7 @@ Version 1.5.2 - SVN
     leakage when Firefox does DNS prefetching for URLs contained in emails.
   - Added the ability to configure Google Mail (Gmail) as the mail server
     behind SquirrelMail.
+  - Explicitly disable caching for left_main and right_main pages (#2983134).
 
 Version 1.5.1 (branched on 2006-02-12)
 --------------------------------------
